# Deep-Learning-for-Solar-Panel-Recognition

./: README.md  config.toml  pyproject.toml  requirements.txt  test.ipynb
docs/: conf.py
notebooks/: binary_segmentation_Zijun.ipynb  segmentation_pytorch.ipynb  segmentation_pytorch_lightning.ipynb
src/deepsolar/data/: download.py  utils.py  wrappers.py
src/deepsolar/models/: yolo_detect.py  yolo_train.py
src/deepsolar/models/segmentation/: dataloader.py  datasets.py  inference.py  model.py  test.py  train.py  transformers.py  utils.py
src/deepsolar/models/segmentation/segmentation_models_pytorch/: __init__.py  train.py
src/deepsolar/models/segmentation/segmentation_models_pytorch/base/: modules.py
src/deepsolar/models/segmentation/segmentation_models_pytorch/datasets/: oxford_pet.py
src/deepsolar/models/segmentation/segmentation_models_pytorch/encoders/: __init__.py  _base.py  _preprocessing.py  densenet.py  dpn.py  inceptionresnetv2.py  inceptionv4.py  resnet.py  timm_efficientnet.py  timm_gernet.py  timm_mobilenetv3.py  timm_regnet.py  timm_res2net.py  timm_resnest.py  timm_sknet.py  vgg.py  xception.py
src/deepsolar/models/segmentation/segmentation_models_pytorch/losses/: _functional.py  dice.py  focal.py  jaccard.py  lovasz.py  soft_bce.py  tversky.py
src/deepsolar/models/segmentation/segmentation_models_pytorch/metrics/: __init__.py  metrics.py
src/deepsolar/models/segmentation/segmentation_models_pytorch/utils/: functional.py  losses.py
src/deepsolar/models/yolo/yolov5/: detect.py  export.py  hubconf.py  train.py  val.py
(+30 files in other folders)
