[project]
name = "deepsolar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.6",
    "awscli>=1.40.10",
    "click>=8.1.8",
    "coverage>=7.8.0",
    "flake8>=7.2.0",
    "googlemaps>=4.10.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pycocotools>=2.0.8",
    "python-dotenv>=1.1.0",
    "pytorch-lightning>=2.5.1.post0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch>=0.5.0",
    "sentinelhub>=3.11.1",
    "sentinelsat>=1.2.1",
    "sphinx>=7.3.7",
    "tabulate>=0.9.0",
    "tensorboard>=2.19.0",
    "wandb>=0.19.11",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
exclude = [".venv"]
indent-width = 4
line-length = 120

[tool.ruff.lint]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
